# client/swagger.json
@@ -1350,6 +1350,45 @@
 					}
 				]
 			}
+		},
+		"/booking/{id}/path": {
+			"get": {
+				"tags": ["Booking"],
+				"operationId": "BookingGetPath",
+				"parameters": [
+					{
+						"name": "id",
+						"in": "path",
+						"required": true,
+						"schema": {
+							"type": "integer",
+							"format": "int32"
+						}
+					}
+				],
+				"responses": {
+					"500": {
+						"description": "Server Error",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/InternalErrorResponse"
+								}
+							}
+						}
+					},
+					"200": {
+						"description": "Success",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/BookingPathDTO"
+								}
+							}
+						}
+					}
+				}
+			}
 		}
 	},
 	"components": {
@@ -3600,6 +3639,42 @@
 						"items": {
 							"$ref": "#/components/schemas/BookingExtraRequest"
 						}
+					}
+				}
+			},
+			"BookingPathDTO": {
+				"type": "object",
+				"additionalProperties": false,
+				"required": ["bookingId", "outletId", "outletSlug", "outletName", "facilityId", "facilityName", "slotId", "slotStartDatetime"],
+				"properties": {
+					"bookingId": {
+						"type": "integer",
+						"format": "int32"
+					},
+					"outletId": {
+						"type": "integer",
+						"format": "int32"
+					},
+					"outletSlug": {
+						"type": "string"
+					},
+					"outletName": {
+						"type": "string"
+					},
+					"facilityId": {
+						"type": "integer",
+						"format": "int32"
+					},
+					"facilityName": {
+						"type": "string"
+					},
+					"slotId": {
+						"type": "string",
+						"format": "uuid"
+					},
+					"slotStartDatetime": {
+						"type": "string",
+						"format": "date-time"
 					}
 				}
 			}
